src/objects/Week_Code__c.object
<CustomObject>
    <description>Keeps records from caesars.week_code table</description>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_week_cd_desc__c</fullName>
        <label>c_week_cd_desc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Week Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>c_quality_cd__c</columns>
        <columns>c_week_cd_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Week Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Week Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>